# local_repo_template

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dvc.yaml  pyproject.toml  setup_instructions.md
.devcontainer/: setup.sh
.devcontainer/helpers/: dvc_setup.sh
.github/workflows/: copilot-code-review.yml  ruff.yml
code/src/: config.py
setup_scripts/: devcontainer.json  precommit.sh  ruff.sh  setup.sh
setup_scripts/helpers/: pre_commit_setup.sh  uv_setup.sh
